# 2017-concurso-ferrovial

./: .gitignore  2017-concurso-ferrovial.xml  CMakeLists.txt  README.md  conectarse.sh  fakeLanzaMotores.sh  lanzaAsus.sh  lanzaMotores.sh  verDepth.sh  verRgb.sh
cmake/template/: 2017_CONCURSO_FERROVIALConfig.cmake.in
doc/: groups.dox  main.dox  requirements.md
libraries/: CMakeLists.txt
libraries/ExampleLibrary/: CMakeLists.txt
programs/: CMakeLists.txt  depth.py  main.py  moveReact-spatial.py  moveReact-took-us-OMIT-BRIDGE-2.py  moveReact-took-us-OMIT-BRIDGE-3.py  moveReact-took-us-OMIT-BRIDGE.py  moveToFurthest.py  prep.py  preprogrammed.py  robot.py  spatialInterrupt.py
programs/QRDetection/: CMakeLists.txt  QRDetection.cpp  QRDetection.hpp  SegmentorThread.cpp  SegmentorThread.hpp  main.cpp
programs/exampleProgram/: CMakeLists.txt  ExampleProgram.hpp  main.cpp
scripts/admin/: update-dox.sh
scripts/gnome/: 2017-concurso-ferrovial.desktop
share/: CMakeLists.txt
